apps/3d/spoolman/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spoolman
  labels:
    name: spoolman
    app.kubernetes.io/name: spoolman
    app.kubernetes.io/part-of: 3d
