apps/3d/spoolman/manifests/spoolmansync-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spoolmansync
  namespace: spoolman
  labels:
    app.kubernetes.io/name: spoolmansync
    app.kubernetes.io/part-of: 3d
spec:
  selector:
    matchLabels:
      app: spoolmansync
  template:
    metadata:
      labels:
        app: spoolmansync
        app.kubernetes.io/name: spoolmansync
    spec:
      containers:
        - name: spoolmansync
          image: ghcr.io/gibz104/spoolmansync:latest
          ports:
            - containerPort: 3000
              name: http
          volumeMounts:
            - name: data
              mountPath: /data
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: spoolmansync-data
