apps/3d/spoolman/manifests/spoolmansync-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spoolmansync
  namespace: spoolman
  labels:
    app.kubernetes.io/name: spoolmansync
    app.kubernetes.io/part-of: 3d
spec:
  selector:
    app: spoolmansync
  ports:
    - port: 3000
      targetPort: http
      name: http
